Project

General

Profile

Actions

Bug #7409

closed

Fix bsearch documentation bug - should be O(log n)

Bug #7409: Fix bsearch documentation bug - should be O(log n)

Added by Anonymous almost 14 years ago. Updated almost 14 years ago.

Status:
Closed
Target version:
ruby -v:
ruby 2.0.0dev (2012-11-20 trunk 37749) [x86_64-darwin11.4.0]
Backport:
[ruby-core:49661]

Description

See attached


Files

bsearch-time-complexity-doc.patch (1.07 KB) bsearch-time-complexity-doc.patch Anonymous, 11/20/2012 06:32 PM

Updated by mame (Yusuke Endoh) almost 14 years ago Actions #1 [ruby-core:49664]

  • Status changed from Open to Assigned
  • Assignee set to mame (Yusuke Endoh)
  • Target version set to 2.0.0

Whoa, thank you!

--
Yusuke Endoh

Updated by mame (Yusuke Endoh) almost 14 years ago Actions #2

  • Status changed from Assigned to Closed
  • % Done changed from 0 to 100

This issue was solved with changeset r37755.
Charlie, thank you for reporting this issue.
Your contribution to Ruby is greatly appreciated.
May Ruby be with you.


  • array.c (rb_ary_bsearch): fix rdoc bug (O(n log n) -> O(log n)).
    Patch by Charlie Somerville. [ruby-core:49661] [Bug #7409]

  • range.c (range_bsearch): ditto.

Actions

Also available in: PDF Atom